Add create-transaction view

--- a/templates/home.html
+++ b/templates/home.html
@@ -30,21 +30,21 @@
                     <div class="form-group row">
                         <label for="date-input" class="col-2 col-form-label">Date</label>
                         <div class="col-10">
-                            <input id="date-input" class="form-control" type="date" >
+                            <input id="date-input" class="form-control" type="date" value="{{today}}" name="date">
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <label for="description-input" class="col-2 col-form-label">Description</label>
                         <div class="col-10">
-                            <input id="description-input" class="form-control" type="text" >
+                            <input id="description-input" class="form-control" type="text" name="description">
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <label for="transaction-size-input" class="col-2 col-form-label">Transaction Size</label>
                         <div class="col-10">
-                            <input id="transaction-size-input" class="form-control" type="number" step='0.01' value='0.00' placeholder='0.00'>
+                            <input id="transaction-size-input" class="form-control" type="number" step='0.01' value='0.00' placeholder='0.00' name="transaction-size">
                         </div>
                     </div>
 
