--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,9 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.10.0/d3.min.js"></script>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     </head>
+    
     <body>
         <div id="balance-chart-container" class="container-fluid">
             <svg id="balance-chart">
